# aikit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
.superpowers/sdd/: final-fix-2-report.md  final-fix-report.md
crates/aikit-core/: Cargo.toml
crates/aikit-core/src/: cache.rs  config.rs  config_ops.rs  error.rs  import.rs  lib.rs  provider.rs  updater.rs
crates/aikit-core/src/targets/: backup.rs  claude.rs  codex.rs  detect.rs  gemini.rs  mod.rs
crates/aikit-core/tests/: config_ops_tests.rs  config_tests.rs  import_tests.rs  provider_tests.rs  target_tests.rs  updater_tests.rs
crates/aikit-tui/: Cargo.toml
crates/aikit-tui/src/: app.rs  input.rs  main.rs  ui.rs
crates/aikit-tui/tests/: app_state_tests.rs
docs/superpowers/plans/: 2026-06-27-aikit-implementation.md  2026-06-27-provider-management-import-implementation.md
docs/superpowers/specs/: 2026-06-27-ai-provider-tui-design.md  2026-06-27-provider-management-import-design.md
scripts/: install.ps1  install.sh  version.ps1
