[workspace]
members = ["crates/aikit-core", "crates/aikit-tui"]
resolver = "2"

[workspace.package]
version = "1.1.3"
edition = "2021"
authors = ["MillyLee <millyleecn@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/millylee/aikit"

[workspace.dependencies]
color-eyre = "0.6"
crossterm = "0.29"
directories = "6"
ratatui = "0.30"
flate2 = "1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
zip = "2"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
wiremock = "0.6"
