[package]
name = "aikit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
directories.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true
