[package]
name = "aikit-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "aikit_tui"
path = "src/lib.rs"

[[bin]]
name = "aikit"
path = "src/main.rs"

[dependencies]
aikit-core = { path = "../aikit-core" }
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
wiremock.workspace = true
